Add GitHub Pages configuration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,15 +26,15 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install --prefix client
+        run: npm ci
 
       - name: Build project
-        run: npm run build --prefix client
+        run: npm run build
 
       - name: Upload build output
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/upload-pages-artifact@v1
         with:
-          path: client/dist
+          path: dist/public
 
   deploy:
     environment:
@@ -46,5 +46,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
-
