--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,13 +1,16 @@
 jobs:
-name: Build and Deploy to GitHub Pages
+name: Build and publish docs/ for GitHub Pages
 
 on:
   push:
     branches:
       - main
+    # avoid running when only docs/ changes to prevent loops
+    paths-ignore:
+      - 'docs/**'
 
 jobs:
-  build-and-deploy:
+  build-and-publish-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -36,9 +39,20 @@ jobs:
           echo "Print index.html head (if exists):"
           [ -f ./dist/public/index.html ] && head -n 40 ./dist/public/index.html || echo 'index.html not found'
 
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/public
-          publish_branch: gh-pages
+      - name: Copy build to docs/
+        run: |
+          rm -rf docs || true
+          mkdir -p docs
+          cp -a dist/public/. docs/
+
+      - name: Commit and push docs to main
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add docs
+          if git diff --staged --quiet; then
+            echo "No changes to docs/ - skipping commit"
+          else
+            git commit -m "chore(docs): publish site build [skip ci]"
+            git push origin main
+          fi
