--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,27 +20,31 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-          
+
       - name: Install dependencies
-        run: npm ci
-        
+        run: |
+          cd client
+          npm ci
+
       - name: Build
-        run: npm run build
-        
+        run: |
+          cd client
+          npm run build
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './dist'
-          
+          path: './client/dist'  # <-- where vite outputs the build
+
   deploy:
     environment:
       name: github-pages
